--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <script defer type="text/javascript" src={"js/pngfix.js"|ezdesign}></script>
         <![endif]-->
 
-  <title>Gassmagasinet.no - For stage</title>
+  <title>Gassmagasinet.no  For stage</title>
 </head>
 
 <body>
