update article image

--- a/index.html
+++ b/index.html
@@ -115,15 +115,19 @@
   <!--######### MENU STOP #########-->
 
   <div class="container" id="content">
-    <div class="grid-padder clearfix">
-      <div class="col-1-2 mr">
-        <div class="article-intro main-article">
-          <a href="/article/20101116/NYHETER/101119999/1007&amp;ExpNodes=1007" class="intro-image"><img src="http://GMimg.no.publicus.com/apps/pbcsi.dll/bilde?Site=GM&amp;Date=20101116&amp;Category=NYHETER&amp;ArtNo=101119999&amp;Ref=AR&amp;MaxW=468" alt="" /></a>
+    <div class="grid-padder clearfix">    
+		
+      <div class="col-1-2-3 ">
+			  <div class="article-intro main-article">
+          <a href="/article/20101116/NYHETER/101119999/1007&amp;ExpNodes=1007" class="intro-image"><img src="images/wide.jpg?maxW=761" alt="" /></a>
 
           <h1><a href="/article/20101116/NYHETER/101119999/1007&amp;ExpNodes=1007">Gass må selges bedre</a></h1>
 
-          <p><span class="faded">Gasstyper:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi congue fringilla pulvinar. Nunc tincidunt bibendum dui, ut eleifend turpis commodo in. Etiam sit amet nibh nunc, in mattis elit.</p><a href="/article/20101116/NYHETER/101119999/1007&amp;ExpNodes=1007" class="arrow">Les mer</a>
+          <p><span class="faded">Gasstyper:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi congue fringilla pulvinar. Nunc tincidunt bibendum dui, ut eleifend turpis commodo in. Etiam sit amet nibh nunc, in mattis elit.</p>
         </div>
+
+      <div class="col-1-2 mr">
+
 
         <div class="line"></div>
 
@@ -673,7 +677,8 @@
                 <li><a class="arrow" href="#">Stell og vedlikehold</a></li>
             </div>
           </div>
-        </div>        
+        </div>   
+			</div>     
 <!-- END COL 3-->
       </div>
 <!-- /END COL 3-->
