Major changes to menu - added RSS icon funtionality

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <li><a href="#">Tema</a></li>
             <li><a href="#">Debatt</a></li>
             <li><a href="#">Produktnytt</a></li>
+            <li><div class="RSS"><img src="images/icon-rss.gif" id="RSS-icon"><a href="#">RSS</a></div></li>
         </ul>
       </div>
       <div id="right-side">
