New logo_icon on byline

--- a/artikkel.html
+++ b/artikkel.html
@@ -132,6 +132,13 @@
               Sed placerat vulputate felis, in pellentesque nulla condimentum sed. Aliquam aliquam ipsum ac diam accumsan ac malesuada justo scelerisque. Aliquam erat volutpat. Vivamus eget neque lectus, ut semper neque. Vivamus consequat, lacus id vestibulum dictum, nibh dolor dapibus est, sed scelerisque urna odio eget massa. asdfasdf
             </div>
             <div class="byline">
+            	
+            		<div class="person">
+            		<img src="images/logo_icon.png" style="margin-right: 0px;">
+               		 <img alt="Georg  Mathisen" src="http://mlimg.no.publicus.com/apps/pbcsi.dll/persbilde?Avis=ML&amp;ID=Georg&amp;maxw=54">
+               		 <strong>Georg  Mathisen</strong><br><a href="mailto:georg@skarland.no">georg@skarland.no</a>
+              		</div>
+              <!-- 
               <div class="person">
                 <img src="images/content/bylineimage.png">
                 <strong>Line Hansen</strong><br /><a href="mailto:line@skarland.no">line@skarland.no</a>
@@ -140,6 +147,7 @@
                 <img src="images/content/bylineimage.png">
                 <strong>Line Hansen</strong><br /><a href="mailto:line@skarland.no">line@skarland.no</a>
               </div>
+              -->
             </div>
             <div class="tools">
               <p>Publisert: 17.11.10</p>
