Link på artikkelbilde

--- a/artikkel.html
+++ b/artikkel.html
@@ -122,7 +122,7 @@
 
         <div class="col-1-2 mr">
           <div class="article">
-            <div class="article-mainpicture"><img alt="" src="http://GMimg.no.publicus.com/apps/pbcsi.dll/bilde?Site=GM&amp;Date=20101116&amp;Category=NYHETER&amp;ArtNo=101119999&amp;Ref=AR&amp;MaxW=456" /></div>
+            <div class="article-mainpicture"><a style="padding-bottom:5px;" href="http://mlimg.no.publicus.com/apps/pbcsi.dll/bilde?Avis=ML&amp;Dato=20121231&amp;Kategori=NYHETER&amp;Lopenr=121239999&amp;Ref=AR&amp;Profile=1001&amp;MaxW=800&amp;MaxH=800&amp;q=100"><img alt="" src="http://GMimg.no.publicus.com/apps/pbcsi.dll/bilde?Site=GM&amp;Date=20101116&amp;Category=NYHETER&amp;ArtNo=101119999&amp;Ref=AR&amp;MaxW=456" /></a></div>
 
             <div class="picture-caption">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin varius, nisl eget cursus ornare, risus mi lacinia arcu, quis porta massa neque a sapien.
