changed topbanner scss

--- a/index.html
+++ b/index.html
@@ -26,14 +26,9 @@
     <div class="container">
       <div id="top-banner">
         <div class="grid-padder clearfix">
-          <div class="hlh-box fl">
-            <div class="padder clearfix">
-              <a href="/section/hvemlevererhva">Produkt og tjenestegrupper</a><br />
-              <h3>Firma- og fritekst-søk:</h3>
-              <form action="/section/hvemlevererhva" name="submit1" class="searchfield" target="_self" method="get" id="submit1">
-                <input name="cont" value="251" type="hidden" /> <input name="side" value="40" type="hidden" /> <input name="type" value="1" type="hidden" /> <input class="searchfield" name="rhl_felt_seek" value="" type="text" /> <input src="images/hlh-search-btn.gif" alt="Søk" class="hlh-searchbtn" type="image" />
-              </form>
-            </div>
+          <div class="ad-150">
+            <img src="http://gm.oams.eu.publicus.com/ads/GM/medabo-150x150-r.gif">
+
           </div>
 
           <div class="ad-768">
@@ -41,8 +36,9 @@
             
           </div>
 
-          <div class="ad-150">
-            <img src="http://gm.oams.eu.publicus.com/ads/GM/medabo-150x150-r.gif">
+          <div class="hlh-box fl">
+          	<iframe name="maleren-minisearch" width="164" height="150" src="http://www.hvemlevererhva.no/Maleren/Minisoek" frameborder="no" scrolling="no"></iframe>
+
           </div>
         </div>
       </div>
